fixed align

--- a/mySite/css/style.css
+++ b/mySite/css/style.css
@@ -11,7 +11,6 @@ h1 {
     font-family: 'Sacramento', cursive;
     font-size: 5.625rem; /*better use rem to guarantee the correct size*/
     color: #66BFBF;
-    line-height: 2;
 }
 
 h2 {
@@ -30,6 +29,8 @@ h3 {
 p {    
     color: #40514E;
     /*text-align: center;*/
+    
+    line-height: 2;
 }
 
 a {
@@ -38,12 +39,10 @@ a {
 }
 
 hr {
-    border-style: none;
-    border-top-style: dotted;
-    width: 5%;
-    border-color: #EAF6F6;
-    border-width: 5px;
-    border-radius: 0;
+    border: dotted #EAF6F6 6px;
+    border-bottom: none;
+    width: 4%;
+    margin: 100px auto;
 }
 
 .pro {
@@ -72,12 +71,12 @@ hr {
 .top-cloud {
     position: absolute;
     right: 300px;
-    top: 50px;
+    top: 40px;
 }                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   
 
 .bottom-cloud {
     position: absolute;  
-    left: 300px;
+    left: 250px;
     bottom: 300px;  
 }
 
